[package]
name = "monitoring_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
mongodb = "2.8"
bson = "2"
chrono = { version = "0.4", features = ["serde"] }